# dukascopy-ticks

./: .gitignore  README.md  example.py  pyproject.toml
MQL5/Scripts/: DuskacopyCSVTickParser.mqh  Example.mq5
src/: dukascopy_tick_data_fetcher.py
tests/: conftest.py
tests/unit/: test_duskacopy_tick_data_fetcher.py
